--- a/HuggingFace/fastai_issues_model.ipynb
+++ b/HuggingFace/fastai_issues_model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "8a9f055d",
+   "id": "517bfefb",
    "metadata": {},
    "source": [
     "# Fine Tune Text Summarizer With Hugging Face\n",
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1b07047f",
+   "id": "fd8916c5",
    "metadata": {},
    "source": [
     "This will fine tune a model to summarize GitHub Issues from the GitHub repo fastai/fastai"
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "7677c219",
+   "id": "a79d72d2",
    "metadata": {},
    "outputs": [
     {
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f3c4dbdb",
+   "id": "7a63efb9",
    "metadata": {},
    "source": [
     "# Get the Data"
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e628b99f",
+   "id": "df5d86c7",
    "metadata": {},
    "source": [
     "Uncomment this block and run it if this is the first time running this notebook.  You need to have a [personal access token](https://docs.github.com/en/github/authenticating-to-github/creating-a-personal-access-token) in an environment variable named `GH_PAT`. "
@@ -72,7 +72,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "8ea84346",
+   "id": "31e3425e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +85,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "af63c56d",
+   "id": "37a575f5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +101,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "5b8b20ba",
+   "id": "d9246aae",
    "metadata": {},
    "outputs": [
     {
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dd09d72e",
+   "id": "ba1048e4",
    "metadata": {},
    "source": [
     "## Process The Data"
@@ -127,7 +127,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "3e644980",
+   "id": "bbbd537f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +138,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "7165a07a",
+   "id": "e9f1504e",
    "metadata": {
     "scrolled": false
    },
@@ -165,7 +165,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "80a0c503",
+   "id": "0dddd189",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d0a35602",
+   "id": "a50130fd",
    "metadata": {},
    "source": [
     "### Tokenize"
@@ -184,7 +184,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "929e71af",
+   "id": "a03390bd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,7 +208,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "7a370e07",
+   "id": "d5c23c41",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,7 +226,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "3d5aa1e9",
+   "id": "0bf442c8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "35d86785",
+   "id": "b027be98",
    "metadata": {},
    "source": [
     "## Fine Tuning The Model With Trainer"
@@ -246,7 +246,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "98c594da",
+   "id": "b8a62dda",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -278,7 +278,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "b74201b1",
+   "id": "daf1f968",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -300,7 +300,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "4a93fbae",
+   "id": "954a8422",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -310,7 +310,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "d511e5ac",
+   "id": "73e015ba",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -328,7 +328,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "35c5ea1a",
+   "id": "e16b15ca",
    "metadata": {},
    "outputs": [
     {
@@ -462,7 +462,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "29951d0e",
+   "id": "638ab856",
    "metadata": {},
    "source": [
     "# Questions\n",
@@ -472,8 +472,16 @@
     "- Is there a way to grab the recommended Training arguments for the model I'm using from the Hub rather that manually specifying them myself using `Seq2SeqTrainingArguments`?  It seems that the defaults for `Seq2SeqTrainingArguments` are not model-specific, but perhaps there is a way to get this?  \n",
     "- Similarly is there a way to automatically grab the metrics or recommended metrics to use that were trained the model just to ensure consistency from the model hub?  \n",
     "- Why is `model` passed into DataCollatorForSeq2Seq?  I can see from the code that it is using the model's `prepare_decoder_input_ids_from_labels` attribute, but isn't that something that would/should also be available in a tokenizer instead?  I'm just trying to build a better mental model of what is happening.  \n",
-    "- Is there a way to create my own pipeline object similar to the high level magic you have for pretrained magic?  Like is there a way I can leverage some of the same machinery to create my own pipeline?  I know I can create it myself, but wondering if there is a way to leverage something you already have so I don't have to build a thing that takes strings, tokenizes, numericalizes, does a forward pass, then decodes that back into a string with beam search etc. "
+    "- Is there a way to create my own pipeline object similar to the high level magic you have for pretrained models?  Like is there a way I can leverage some of the same machinery you have so I don't have to create my own inf?  I know I can create it myself, but wondering if there is a way to leverage something you already have so I don't have to build a thing that takes strings, tokenizes, numericalizes, does a forward pass, then decodes that back into a string with beam search etc. "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1ec9eef8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
