--- a/HuggingFace/fastai_issues_model.ipynb
+++ b/HuggingFace/fastai_issues_model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "517bfefb",
+   "id": "b02633ec",
    "metadata": {},
    "source": [
     "# Fine Tune Text Summarizer With Hugging Face\n",
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fd8916c5",
+   "id": "c34509f0",
    "metadata": {},
    "source": [
     "This will fine tune a model to summarize GitHub Issues from the GitHub repo fastai/fastai"
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "a79d72d2",
+   "id": "f93008db",
    "metadata": {},
    "outputs": [
     {
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7a63efb9",
+   "id": "26eb7dec",
    "metadata": {},
    "source": [
     "# Get the Data"
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "df5d86c7",
+   "id": "3bd29a55",
    "metadata": {},
    "source": [
     "Uncomment this block and run it if this is the first time running this notebook.  You need to have a [personal access token](https://docs.github.com/en/github/authenticating-to-github/creating-a-personal-access-token) in an environment variable named `GH_PAT`. "
@@ -72,7 +72,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "31e3425e",
+   "id": "5784610c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +85,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "37a575f5",
+   "id": "74097ce0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +101,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "d9246aae",
+   "id": "2303c024",
    "metadata": {},
    "outputs": [
     {
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ba1048e4",
+   "id": "c245bf4e",
    "metadata": {},
    "source": [
     "## Process The Data"
@@ -127,7 +127,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "bbbd537f",
+   "id": "43c0585a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +138,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "e9f1504e",
+   "id": "1d82ddfc",
    "metadata": {
     "scrolled": false
    },
@@ -165,7 +165,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "0dddd189",
+   "id": "19eb1a8c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a50130fd",
+   "id": "b3a816af",
    "metadata": {},
    "source": [
     "### Tokenize"
@@ -184,7 +184,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "a03390bd",
+   "id": "7f5726be",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,7 +208,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "d5c23c41",
+   "id": "3c019167",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,7 +226,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "0bf442c8",
+   "id": "bd2218be",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b027be98",
+   "id": "7fd6c4cf",
    "metadata": {},
    "source": [
     "## Fine Tuning The Model With Trainer"
@@ -246,7 +246,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "b8a62dda",
+   "id": "1653814e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -277,8 +277,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "daf1f968",
+   "execution_count": 26,
+   "id": "ccc837bc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -294,13 +294,14 @@
     "    num_train_epochs=5,\n",
     "    predict_with_generate=True,\n",
     "    fp16=True,\n",
+    "    logging_steps=1\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "954a8422",
+   "execution_count": 27,
+   "id": "2013fb72",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -309,8 +310,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "73e015ba",
+   "execution_count": 28,
+   "id": "04d0c8e6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -327,20 +328,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "e16b15ca",
+   "execution_count": 29,
+   "id": "f42c4789",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/conda/lib/python3.7/site-packages/torch/nn/parallel/_functions.py:65: UserWarning: Was asked to gather along dimension 0, but all input tensors were scalars; will instead unsqueeze and return a vector.\n",
-      "  warnings.warn('Was asked to gather along dimension 0, but all '\n",
-      "/opt/conda/lib/python3.7/site-packages/torch/optim/lr_scheduler.py:134: UserWarning: Detected call of `lr_scheduler.step()` before `optimizer.step()`. In PyTorch 1.1.0 and later, you should call them in the opposite order: `optimizer.step()` before `lr_scheduler.step()`.  Failure to do this will result in PyTorch skipping the first value of the learning rate schedule. See more details at https://pytorch.org/docs/stable/optim.html#how-to-adjust-learning-rate\n",
-      "  \"https://pytorch.org/docs/stable/optim.html#how-to-adjust-learning-rate\", UserWarning)\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -377,63 +368,63 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <td>1</td>\n",
-       "      <td>No log</td>\n",
-       "      <td>4.610332</td>\n",
+       "      <td>3.039200</td>\n",
+       "      <td>4.608938</td>\n",
        "      <td>11.000000</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>11.000000</td>\n",
        "      <td>11.000000</td>\n",
        "      <td>19.000000</td>\n",
-       "      <td>0.723500</td>\n",
-       "      <td>4.146000</td>\n",
+       "      <td>0.685800</td>\n",
+       "      <td>4.374000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>2</td>\n",
-       "      <td>No log</td>\n",
-       "      <td>4.610332</td>\n",
+       "      <td>2.854900</td>\n",
+       "      <td>4.608938</td>\n",
        "      <td>11.000000</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>11.000000</td>\n",
        "      <td>11.000000</td>\n",
        "      <td>19.000000</td>\n",
-       "      <td>0.673000</td>\n",
-       "      <td>4.458000</td>\n",
+       "      <td>0.664500</td>\n",
+       "      <td>4.514000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>3</td>\n",
-       "      <td>No log</td>\n",
-       "      <td>4.610332</td>\n",
+       "      <td>3.966200</td>\n",
+       "      <td>4.608938</td>\n",
        "      <td>11.000000</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>11.000000</td>\n",
        "      <td>11.000000</td>\n",
        "      <td>19.000000</td>\n",
-       "      <td>0.682800</td>\n",
-       "      <td>4.394000</td>\n",
+       "      <td>0.688000</td>\n",
+       "      <td>4.361000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>4</td>\n",
-       "      <td>No log</td>\n",
-       "      <td>4.610332</td>\n",
+       "      <td>2.929300</td>\n",
+       "      <td>4.608938</td>\n",
        "      <td>11.000000</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>11.000000</td>\n",
        "      <td>11.000000</td>\n",
        "      <td>19.000000</td>\n",
-       "      <td>0.686600</td>\n",
-       "      <td>4.370000</td>\n",
+       "      <td>0.662300</td>\n",
+       "      <td>4.530000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>5</td>\n",
-       "      <td>No log</td>\n",
-       "      <td>4.610412</td>\n",
+       "      <td>2.366500</td>\n",
+       "      <td>4.607564</td>\n",
        "      <td>11.000000</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>11.000000</td>\n",
        "      <td>11.000000</td>\n",
        "      <td>19.000000</td>\n",
-       "      <td>0.688400</td>\n",
-       "      <td>4.358000</td>\n",
+       "      <td>0.685500</td>\n",
+       "      <td>4.377000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table><p>"
@@ -448,10 +439,10 @@
     {
      "data": {
       "text/plain": [
-       "TrainOutput(global_step=5, training_loss=3.04730167388916, metrics={'train_runtime': 7.7661, 'train_samples_per_second': 0.644, 'total_flos': 2052989752320.0, 'epoch': 5.0, 'init_mem_cpu_alloc_delta': 2618056704, 'init_mem_gpu_alloc_delta': 242026496, 'init_mem_cpu_peaked_delta': 164737024, 'init_mem_gpu_peaked_delta': 0, 'train_mem_cpu_alloc_delta': 1319022592, 'train_mem_gpu_alloc_delta': 728832512, 'train_mem_cpu_peaked_delta': 0, 'train_mem_gpu_peaked_delta': 157294080})"
+       "TrainOutput(global_step=5, training_loss=3.0312185287475586, metrics={'train_runtime': 4.6374, 'train_samples_per_second': 1.078, 'total_flos': 2052989752320.0, 'epoch': 5.0, 'init_mem_cpu_alloc_delta': 0, 'init_mem_gpu_alloc_delta': 0, 'init_mem_cpu_peaked_delta': 0, 'init_mem_gpu_peaked_delta': 0, 'train_mem_cpu_alloc_delta': 12288, 'train_mem_gpu_alloc_delta': 486162944, 'train_mem_cpu_peaked_delta': 45056, 'train_mem_gpu_peaked_delta': 158930432})"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -462,23 +453,22 @@
   },
   {
    "cell_type": "markdown",
-   "id": "638ab856",
+   "id": "fde61f73",
    "metadata": {},
    "source": [
     "# Questions\n",
     "\n",
-    "- In the training log, why does `Training Loss` report \"No log\" ?   Is this a bug?\n",
     "- We don't need to enable training before using the trainer?  Does the trainer automatically enable training mode, and then disable training mode when its done?  While browsing the code for Trainer, it appears that the attribute `is_in_train` is set to True and then later set to False at the end of training, but I am not 100% sure. \n",
     "- Is there a way to grab the recommended Training arguments for the model I'm using from the Hub rather that manually specifying them myself using `Seq2SeqTrainingArguments`?  It seems that the defaults for `Seq2SeqTrainingArguments` are not model-specific, but perhaps there is a way to get this?  \n",
     "- Similarly is there a way to automatically grab the metrics or recommended metrics to use that were trained the model just to ensure consistency from the model hub?  \n",
     "- Why is `model` passed into DataCollatorForSeq2Seq?  I can see from the code that it is using the model's `prepare_decoder_input_ids_from_labels` attribute, but isn't that something that would/should also be available in a tokenizer instead?  I'm just trying to build a better mental model of what is happening.  \n",
-    "- Is there a way to create my own pipeline object similar to the high level magic you have for pretrained models?  Like is there a way I can leverage some of the same machinery you have so I don't have to create my own inf?  I know I can create it myself, but wondering if there is a way to leverage something you already have so I don't have to build a thing that takes strings, tokenizes, numericalizes, does a forward pass, then decodes that back into a string with beam search etc. "
+    "- Is there a way to create my own pipeline object similar to the high level magic you have for pretrained models?  Like is there a way I can leverage some of the same machinery you have so I don't have to create my own inference machinery?  I know I can create it myself, but wondering if there is a way to avoid having to build a thing that takes strings, tokenizes, numericalizes, does a forward pass, then decodes that back into a string with beam search etc. "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1ec9eef8",
+   "id": "a3613a9e",
    "metadata": {},
    "outputs": [],
    "source": []
